# print

./: .env.example  .gitignore  AUTHORIZATION.md  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
.cursor/rules/: auth.mdc  author.mdc  book.mdc  book_author.mdc  context.mdc  inventory.mdc  order.mdc  platform_user.mdc  rating.mdc  variant.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260703_0001_create_genres.py  20260705_0002_create_auth_foundation.py  20260705_0003_tighten_users_column_lengths.py  20260707_0004_uuidv7_primary_key_default.py  20260707_0005_create_platform_tables.py  20260707_0006_create_product_options.py  20260707_0007_create_marketplace_listings.py  20260707_0008_create_authors.py  20260707_0009_create_book_genres.py  20260707_0010_create_orders.py  20260707_0011_create_ratings.py  20260707_0012_create_password_reset_tokens.py
app/: main.py
app/auth/: controller.py  privilege_catalog.py
app/author/: __init__.py  controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/book/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/book_author/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/book_genre/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/book_rating/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/business/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/business_book/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/business_rating/: controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/business_user/: __init__.py  controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/entity_image/: controller.py  model.py  query.py  service.py
app/genre/: __init__.py  controller.py  model.py  orm.py  query.py  repository.py  schemas.py  service.py
app/inventory_item/: controller.py  model.py  query.py  service.py
app/item_attribute/: controller.py  model.py  query.py  service.py
app/middleware/: auth.py  process_time.py
app/module/: __init__.py  controller.py  model.py  query.py  service.py
app/order/: controller.py  model.py  (+5 more)
docs/: ITERATIONS.md  POSTGRES_MIGRATION_PHASE_0.md  POSTGRES_SCHEMA_PHASE_2.md
scripts/: README.md  convert_repositories_to_class.py  migrate_inventory_to_variant.py  normalize_service_repos.py  seed_defaults.py  seed_smoke_test.py  seed_super_admin.py  update_query_callers.py  update_repository_callers.py  upload_seeds.py
tests/: test_business_delete.py  test_genre_repository.py  test_order_status.py  test_revocation.py  test_route_authorization.py
(+130 files in other folders)
